--- a/app/src/main/res/layout/product_fragment.xml
+++ b/app/src/main/res/layout/product_fragment.xml
@@ -4,13 +4,192 @@
     xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
-            name="productViewModel"
-            type="com.bizarrecoding.sm4sh.Screens.Product.ProductViewModel" />
+            name="product"
+            type="com.bizarrecoding.sm4sh.screens.product.ProductViewModel" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Screens.Product.ProductFragment">
+        android:background="@drawable/gradient_product"
+        tools:context=".screens.product.ProductFragment">
+
+        <TextView
+            android:id="@+id/productSku"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:alpha="0.5"
+            android:textAllCaps="true"
+            android:textColor="@android:color/primary_text_dark"
+            android:text="@{@string/sku_format(product.product.sKU)}"
+            app:layout_constraintStart_toStartOf="@+id/imageButton2"
+            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
+            tools:text="SKU:6486849" />
+
+        <TextView
+            android:id="@+id/productName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="@{product.product.name}"
+            android:textAllCaps="true"
+            android:textColor="@android:color/primary_text_dark"
+            android:textSize="32sp"
+            app:layout_constraintStart_toStartOf="@+id/productSku"
+            app:layout_constraintTop_toBottomOf="@+id/productSku"
+            tools:text="Captain Falcon" />
+
+        <TextView
+            android:id="@+id/productUni"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:alpha="0.7"
+            android:textColor="@android:color/primary_text_dark"
+            android:text="@{product.product.universe}"
+            app:layout_constraintStart_toStartOf="@+id/productName"
+            app:layout_constraintTop_toBottomOf="@+id/productName"
+            tools:text="F-Zero" />
+
+        <TextView
+            android:id="@+id/productKind"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:textColor="@android:color/primary_text_dark"
+            android:text="@{product.product.kind}"
+            app:layout_constraintBottom_toBottomOf="@+id/productUni"
+            app:layout_constraintStart_toEndOf="@+id/productUni"
+            app:layout_constraintTop_toTopOf="@+id/productUni"
+            tools:text="Human" />
+
+        <TextView
+            android:id="@+id/downloads"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@{@string/number_format(product.downloads)}"
+            android:textAllCaps="false"
+            android:textColor="@android:color/primary_text_dark"
+            app:layout_constraintStart_toStartOf="@+id/productUni"
+            app:layout_constraintTop_toBottomOf="@+id/productUni"
+            tools:text="4,343,543 downloads" />
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            style="@style/Widget.AppCompat.RatingBar.Indicator"
+            android:layout_width="186dp"
+            android:layout_height="37dp"
+            android:layout_marginTop="8dp"
+            android:clickable="false"
+            android:indeterminate="false"
+            android:numStars="5"
+            android:rating="@{product.rating}"
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            app:layout_constraintEnd_toEndOf="@+id/downloads"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/downloads"
+            app:layout_constraintTop_toBottomOf="@+id/downloads"
+            tools:rating="3" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="32dp"
+            android:background="@android:color/background_light"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/productPrice"
+            app:layout_constraintVertical_bias="1.0">
+
+            <ScrollView
+                android:id="@+id/scrollView2"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/productDescription"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="24dp"
+                        android:layout_marginBottom="0dp"
+                        android:text="@{product.product.description}"
+                        tools:text="Lorem ipsum gfwgwf wqdqwdb i qwbdiq uwd quwdqw ndoq wdo" />
+                </LinearLayout>
+            </ScrollView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@android:color/transparent"
+            android:padding="8dp"
+            android:tint="@android:color/background_light"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="?attr/actionModeCloseDrawable" />
+
+        <Button
+            android:id="@+id/productPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@android:color/background_light"
+            android:textColor="@color/colorAccent"
+            android:text="@{@string/money_format(product.product.price)}"
+            tools:text="$9,99"
+            app:layout_constraintEnd_toEndOf="@+id/ratingBar"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/ratingBar"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="5dp"
+            android:layout_height="5dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/productUni"
+            app:layout_constraintEnd_toStartOf="@+id/productKind"
+            app:layout_constraintHorizontal_bias="0.52"
+            app:layout_constraintStart_toEndOf="@+id/productUni"
+            app:layout_constraintTop_toTopOf="@+id/productUni"
+            app:srcCompat="@drawable/dot" />
+
+        <ImageView
+            android:id="@+id/productImage"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            app:imageUrl="@{product.product.imageURL}"
+            app:layout_constraintDimensionRatio="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/ratingBar"
+            app:layout_constraintTop_toBottomOf="@+id/productName"
+            tools:srcCompat="@tools:sample/avatars" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
