--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -6,16 +6,22 @@
     app:startDestination="@id/catalogueFragment">
     <fragment
         android:id="@+id/catalogueFragment"
-        android:name="com.bizarrecoding.sm4sh.Screens.Catalogue.CatalogueFragment"
+        android:name="com.bizarrecoding.sm4sh.screens.catalogue.CatalogueFragment"
         android:label="catalogue_fragment"
-        tools:layout="@layout/catalogue_fragment" >
+        tools:layout="@layout/catalogue_fragment">
         <action
             android:id="@+id/action_catalogueFragment_to_productFragment"
-            app:destination="@id/productFragment" />
+            app:destination="@+id/productFragment"
+            app:popUpTo="@id/catalogueFragment"
+            />
     </fragment>
     <fragment
         android:id="@+id/productFragment"
-        android:name="com.bizarrecoding.sm4sh.Screens.Product.ProductFragment"
+        android:name="com.bizarrecoding.sm4sh.screens.product.ProductFragment"
         android:label="product_fragment"
-        tools:layout="@layout/product_fragment" />
+        tools:layout="@layout/product_fragment" >
+        <argument
+            android:name="productos"
+            app:argType="com.bizarrecoding.sm4sh.models.Product" />
+    </fragment>
 </navigation>
