--- a/app/src/main/res/layout/product_fragment.xml
+++ b/app/src/main/res/layout/product_fragment.xml
@@ -8,188 +8,194 @@
             type="com.bizarrecoding.sm4sh.screens.product.ProductViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/gradient_product"
-        tools:context=".screens.product.ProductFragment">
-
-        <TextView
-            android:id="@+id/productSku"
-            android:layout_width="wrap_content"
+        <ScrollView
+            android:id="@+id/scrollView2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:alpha="0.5"
-            android:textAllCaps="true"
-            android:textColor="@android:color/primary_text_dark"
-            android:text="@{@string/sku_format(product.product.sKU)}"
-            app:layout_constraintStart_toStartOf="@+id/imageButton2"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
-            tools:text="SKU:6486849" />
+            tools:context=".screens.product.ProductFragment"
+            android:scrollbarTrackVertical="@null">
 
-        <TextView
-            android:id="@+id/productName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="@{product.product.name}"
-            android:textAllCaps="true"
-            android:textColor="@android:color/primary_text_dark"
-            android:textSize="32sp"
-            app:layout_constraintStart_toStartOf="@+id/productSku"
-            app:layout_constraintTop_toBottomOf="@+id/productSku"
-            tools:text="Captain Falcon" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/productUni"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:alpha="0.7"
-            android:textColor="@android:color/primary_text_dark"
-            android:text="@{product.product.universe}"
-            app:layout_constraintStart_toStartOf="@+id/productName"
-            app:layout_constraintTop_toBottomOf="@+id/productName"
-            tools:text="F-Zero" />
-
-        <TextView
-            android:id="@+id/productKind"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:textColor="@android:color/primary_text_dark"
-            android:text="@{product.product.kind}"
-            app:layout_constraintBottom_toBottomOf="@+id/productUni"
-            app:layout_constraintStart_toEndOf="@+id/productUni"
-            app:layout_constraintTop_toTopOf="@+id/productUni"
-            tools:text="Human" />
-
-        <TextView
-            android:id="@+id/downloads"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="@{@string/number_format(product.downloads)}"
-            android:textAllCaps="false"
-            android:textColor="@android:color/primary_text_dark"
-            app:layout_constraintStart_toStartOf="@+id/productUni"
-            app:layout_constraintTop_toBottomOf="@+id/productUni"
-            tools:text="4,343,543 downloads" />
-
-        <RatingBar
-            android:id="@+id/ratingBar"
-            style="@style/Widget.AppCompat.RatingBar.Indicator"
-            android:layout_width="186dp"
-            android:layout_height="37dp"
-            android:layout_marginTop="8dp"
-            android:clickable="false"
-            android:indeterminate="false"
-            android:numStars="5"
-            android:rating="@{product.rating}"
-            android:scaleX="0.7"
-            android:scaleY="0.7"
-            app:layout_constraintEnd_toEndOf="@+id/downloads"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/downloads"
-            app:layout_constraintTop_toBottomOf="@+id/downloads"
-            tools:rating="3" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="32dp"
-            android:background="@android:color/background_light"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/productPrice"
-            app:layout_constraintVertical_bias="1.0">
-
-            <ScrollView
-                android:id="@+id/scrollView2"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <LinearLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:background="@drawable/product_cut">
 
                     <TextView
-                        android:id="@+id/productDescription"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="24dp"
-                        android:layout_marginBottom="0dp"
-                        android:text="@{product.product.description}"
-                        tools:text="Lorem ipsum gfwgwf wqdqwdb i qwbdiq uwd quwdqw ndoq wdo" />
-                </LinearLayout>
-            </ScrollView>
+                        android:id="@+id/productSku"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:alpha="0.5"
+                        android:text="@{@string/sku_format(product.product.sKU)}"
+                        android:textAllCaps="true"
+                        android:textColor="@android:color/primary_text_dark"
+                        android:textSize="16sp"
+                        app:layout_constraintStart_toStartOf="@+id/back"
+                        app:layout_constraintTop_toBottomOf="@+id/back"
+                        tools:text="SKU:6486849" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                    <TextView
+                        android:id="@+id/productName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="@{product.product.name}"
+                        android:textAllCaps="true"
+                        android:textColor="@android:color/primary_text_dark"
+                        android:textSize="32sp"
+                        app:layout_constraintStart_toStartOf="@+id/productSku"
+                        app:layout_constraintTop_toBottomOf="@+id/productSku"
+                        tools:text="Captain Falcon" />
 
-        <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:background="@android:color/transparent"
-            android:padding="8dp"
-            android:tint="@android:color/background_light"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="?attr/actionModeCloseDrawable" />
+                    <TextView
+                        android:id="@+id/productUni"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:alpha="0.7"
+                        android:text="@{product.product.universe}"
+                        android:textColor="@android:color/primary_text_dark"
+                        android:textSize="16sp"
+                        app:layout_constraintStart_toStartOf="@+id/productName"
+                        app:layout_constraintTop_toBottomOf="@+id/productName"
+                        tools:text="F-Zero" />
 
-        <Button
-            android:id="@+id/productPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="@android:color/background_light"
-            android:textColor="@color/colorAccent"
-            android:text="@{@string/money_format(product.product.price)}"
-            tools:text="$9,99"
-            app:layout_constraintEnd_toEndOf="@+id/ratingBar"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/ratingBar"
-            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
+                    <TextView
+                        android:id="@+id/productKind"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:text="@{product.product.kind}"
+                        android:textColor="@android:color/primary_text_dark"
+                        android:textSize="16sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/productUni"
+                        app:layout_constraintStart_toEndOf="@+id/productUni"
+                        app:layout_constraintTop_toTopOf="@+id/productUni"
+                        tools:text="Human" />
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="5dp"
-            android:layout_height="5dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/productUni"
-            app:layout_constraintEnd_toStartOf="@+id/productKind"
-            app:layout_constraintHorizontal_bias="0.52"
-            app:layout_constraintStart_toEndOf="@+id/productUni"
-            app:layout_constraintTop_toTopOf="@+id/productUni"
-            app:srcCompat="@drawable/dot" />
+                    <TextView
+                        android:id="@+id/downloads"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:text="@{@string/number_format(product.downloads)}"
+                        android:textAllCaps="false"
+                        android:textColor="@android:color/primary_text_dark"
+                        android:textSize="16sp"
+                        app:layout_constraintStart_toStartOf="@+id/productUni"
+                        app:layout_constraintTop_toBottomOf="@+id/productUni"
+                        tools:text="4,343,543 downloads" />
 
-        <ImageView
-            android:id="@+id/productImage"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            app:imageUrl="@{product.product.imageURL}"
-            app:layout_constraintDimensionRatio="1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ratingBar"
-            app:layout_constraintTop_toBottomOf="@+id/productName"
-            tools:srcCompat="@tools:sample/avatars" />
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="5dp"
+                        android:layout_height="5dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:contentDescription="@string/dot"
+                        app:layout_constraintBottom_toBottomOf="@+id/productUni"
+                        app:layout_constraintEnd_toStartOf="@+id/productKind"
+                        app:layout_constraintHorizontal_bias="0.52"
+                        app:layout_constraintStart_toEndOf="@+id/productUni"
+                        app:layout_constraintTop_toTopOf="@+id/productUni"
+                        app:srcCompat="@drawable/dot" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                    <RatingBar
+                        android:id="@+id/ratingBar"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:clickable="false"
+                        android:isIndicator="false"
+                        android:numStars="5"
+                        android:progressTint="@android:color/background_light"
+                        android:rating="5"
+                        android:scaleX="0.7"
+                        android:scaleY="0.7"
+                        android:secondaryProgressTint="@android:color/background_light"
+                        app:layout_constraintEnd_toEndOf="@+id/downloads"
+                        app:layout_constraintHorizontal_bias="0"
+                        app:layout_constraintStart_toStartOf="@+id/downloads"
+                        app:layout_constraintTop_toBottomOf="@+id/downloads"
+                        tools:rating="1.5" />
+
+                    <ImageButton
+                        android:id="@+id/back"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="24dp"
+                        android:background="@android:color/transparent"
+                        android:contentDescription="@android:string/VideoView_error_text_invalid_progressive_playback"
+                        android:padding="8dp"
+                        android:tint="@android:color/background_light"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="?attr/actionModeCloseDrawable" />
+
+                    <ImageButton
+                        android:id="@+id/share"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:layout_marginEnd="16dp"
+                        android:background="@android:color/transparent"
+                        android:contentDescription="@string/share"
+                        android:padding="8dp"
+                        android:tint="@android:color/background_light"
+                        app:layout_constraintBottom_toBottomOf="@+id/back"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="?attr/actionModeShareDrawable" />
+
+                    <Button
+                        android:id="@+id/productPrice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="32dp"
+                        android:backgroundTint="@android:color/background_light"
+                        android:text="@{@string/money_format(product.product.price)}"
+                        android:textColor="@color/colorAccent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="@+id/ratingBar"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="@+id/ratingBar"
+                        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
+                        app:layout_constraintVertical_bias="0.0"
+                        tools:text="$9,99" />
+
+                    <ImageView
+                        android:id="@+id/productImage"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:contentDescription="@string/product_image"
+                        android:scaleType="fitCenter"
+                        app:imageUrl="@{product.product.imageURL}"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintDimensionRatio=""
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.75"
+                        app:layout_constraintStart_toEndOf="@+id/ratingBar"
+                        app:layout_constraintTop_toBottomOf="@+id/productName"
+                        tools:srcCompat="@tools:sample/avatars" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <TextView
+                    android:id="@+id/productDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="24dp"
+                    android:text="@{product.product.description}"
+                    tools:text="Lorem ipsum gfwgwf wqdqwdb i qwbdiq uwd quwdqw ndoq wdo" />
+            </LinearLayout>
+        </ScrollView>
 </layout>
