--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFAB40</color>
+    <color name="colorPrimary">#F99F00</color>
     <color name="colorPrimaryDark">#D3A1A1A1</color>
     <color name="colorAccent">#DB3069</color>
 </resources>
