--- a/app/src/main/res/layout/new_product_item.xml
+++ b/app/src/main/res/layout/new_product_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="product"
-            type="com.bizarrecoding.sm4sh.database.Product" />
+            type="com.bizarrecoding.sm4sh.models.Product" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,45 +17,38 @@
             android:id="@+id/cardView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
             app:cardBackgroundColor="@color/colorAccent"
-            app:cardCornerRadius="16dp"
-            app:contentPadding="1dp"
+            app:cardCornerRadius="8dp"
             app:layout_constraintBottom_toTopOf="@+id/productName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.cardview.widget.CardView
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="16dp"
-                app:cardUseCompatPadding="false">
+                android:layout_gravity="center"
+                android:layout_margin="1dp"
+                android:background="@drawable/cardview_highlight">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@android:color/transparent">
-
-                    <ImageView
-                        android:id="@+id/productImage"
-                        android:layout_width="100dp"
-                        android:layout_height="0dp"
-                        android:layout_margin="8dp"
-                        android:adjustViewBounds="true"
-                        android:contentDescription="@string/product_image"
-                        android:scaleType="fitCenter"
-                        app:imageUrl="@{product.imageURL}"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintDimensionRatio="1.0"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:srcCompat="@tools:sample/avatars" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
-
+                <ImageView
+                    android:id="@+id/productImage"
+                    android:layout_width="100dp"
+                    android:layout_height="0dp"
+                    android:layout_margin="8dp"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@string/product_image"
+                    android:scaleType="fitCenter"
+                    app:imageUrl="@{product.imageURL}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintDimensionRatio="1.0"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:srcCompat="@tools:sample/avatars" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
         <TextView
