--- a/app/src/main/res/layout/product_fragment.xml
+++ b/app/src/main/res/layout/product_fragment.xml
@@ -11,7 +11,7 @@
         <ScrollView
             android:id="@+id/scrollView2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             tools:context=".screens.product.ProductFragment"
             android:scrollbarTrackVertical="@null">
 
@@ -43,7 +43,6 @@
                         android:id="@+id/productName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp"
                         android:text="@{product.product.name}"
                         android:textAllCaps="true"
                         android:textColor="@android:color/primary_text_dark"
@@ -56,7 +55,6 @@
                         android:id="@+id/productUni"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
                         android:alpha="0.7"
                         android:text="@{product.product.universe}"
                         android:textColor="@android:color/primary_text_dark"
@@ -82,8 +80,8 @@
                         android:id="@+id/downloads"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
-                        android:text="@{@string/number_format(product.downloads)}"
+                        android:layout_marginTop="16dp"
+                        android:text="@{@plurals/number_format(product.downloads)}"
                         android:textAllCaps="false"
                         android:textColor="@android:color/primary_text_dark"
                         android:textSize="16sp"
@@ -107,16 +105,22 @@
 
                     <RatingBar
                         android:id="@+id/ratingBar"
-                        android:layout_width="0dp"
+                        style="@style/Widget.AppCompat.RatingBar.Indicator"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:clickable="false"
                         android:isIndicator="false"
+                        android:max="5"
                         android:numStars="5"
+                        android:paddingStart="0dp"
+                        android:paddingEnd="0dp"
                         android:progressTint="@android:color/background_light"
-                        android:rating="5"
-                        android:scaleX="0.7"
-                        android:scaleY="0.7"
+                        android:rating="@{product.rating}"
+                        android:scaleX="0.8"
+                        android:scaleY="0.8"
                         android:secondaryProgressTint="@android:color/background_light"
+                        android:transformPivotX="0dp"
+                        android:transformPivotY="0dp"
                         app:layout_constraintEnd_toEndOf="@+id/downloads"
                         app:layout_constraintHorizontal_bias="0"
                         app:layout_constraintStart_toStartOf="@+id/downloads"
@@ -125,13 +129,13 @@
 
                     <ImageButton
                         android:id="@+id/back"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="24dp"
                         android:background="@android:color/transparent"
                         android:contentDescription="@android:string/VideoView_error_text_invalid_progressive_playback"
-                        android:padding="8dp"
+                        android:scaleType="fitXY"
                         android:tint="@android:color/background_light"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -139,13 +143,13 @@
 
                     <ImageButton
                         android:id="@+id/share"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
                         android:layout_marginTop="24dp"
                         android:layout_marginEnd="16dp"
                         android:background="@android:color/transparent"
                         android:contentDescription="@string/share"
-                        android:padding="8dp"
+                        android:scaleType="fitXY"
                         android:tint="@android:color/background_light"
                         app:layout_constraintBottom_toBottomOf="@+id/back"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -156,11 +160,11 @@
                         android:id="@+id/productPrice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
                         android:layout_marginBottom="32dp"
                         android:backgroundTint="@android:color/background_light"
                         android:text="@{@string/money_format(product.product.price)}"
                         android:textColor="@color/colorAccent"
+                        android:textSize="20sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/ratingBar"
                         app:layout_constraintHorizontal_bias="0.0"
@@ -183,7 +187,7 @@
                         app:layout_constraintDimensionRatio=""
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.75"
-                        app:layout_constraintStart_toEndOf="@+id/ratingBar"
+                        app:layout_constraintStart_toEndOf="@+id/downloads"
                         app:layout_constraintTop_toBottomOf="@+id/productName"
                         tools:srcCompat="@tools:sample/avatars" />
 
@@ -194,8 +198,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="24dp"
+                    android:lineSpacingExtra="8sp"
                     android:text="@{product.product.description}"
-                    tools:text="Lorem ipsum gfwgwf wqdqwdb i qwbdiq uwd quwdqw ndoq wdo" />
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                    android:textSize="16sp"
+                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
             </LinearLayout>
         </ScrollView>
 </layout>
